[gd_scene load_steps=24 format=3 uid="uid://mp4eyfmiv8p6"]

[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_85g3d"]
[ext_resource type="PackedScene" uid="uid://cc1m2a1obsyn4" path="res://addons/fpc/character.tscn" id="1_o6xl0"]
[ext_resource type="Script" uid="uid://hutuis63hgev" path="res://addons/fpc/character.gd" id="2_tipki"]
[ext_resource type="Texture2D" uid="uid://pe7a4weirj2g" path="res://textures/dark.png" id="3_85g3d"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="4_choun"]
[ext_resource type="Script" uid="uid://bjrr1mkpmcxa8" path="res://scripts/world.gd" id="4_eb6dy"]
[ext_resource type="Script" uid="uid://b1golabhfspb1" path="res://scripts/enemy.gd" id="4_tipki"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="5_ya4ey"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="6_eb6dy"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="7_trceg"]
[ext_resource type="Script" uid="uid://ifajp554w0vs" path="res://scripts/enemy_vision.gd" id="10_choun"]

[sub_resource type="NavigationMesh" id="NavigationMesh_choun"]
vertices = PackedVector3Array(-8.5, 0.5, -10.25, -7.5, 0.5, -10.5, -7.5, 0.5, -49.5, -49.5, 0.5, -49.5, -49.5, 0.5, -8.25, -8.5, 0.5, -8.25, -6.25, 0.5, -10.25, -6.25, 0.5, -8.5, -3.5, 0.5, -8.5, -3.5, 0.5, -10.25, -2.25, 0.5, -10.5, -2.25, 0.5, -49.5, -1.25, 0.5, -10.25, -1.25, 0.5, -8.5, 1.5, 0.5, -8.5, 1.5, 0.5, -10.25, 2.75, 0.5, -10.5, 2.75, 0.5, -49.5, 3.75, 0.5, -10.25, 3.75, 0.5, -8.5, 6.5, 0.5, -8.5, 6.5, 0.5, -10.25, 7.75, 0.5, -10.5, 7.75, 0.5, -49.5, 8.75, 0.5, -10.25, 49.5, 0.5, -9, 49.5, 0.5, -49.5, 8.75, 0.5, -8.75, 8.75, 0.5, 8.75, 49.5, 0.5, 9, -6.25, 0.5, 8.5, -3.5, 0.5, 8.75, -1.25, 0.5, 8.5, 1.5, 0.5, 8.75, 3.75, 0.5, 8.5, 6.5, 0.5, 8.75, -49.5, 0.5, 8.5, -8.5, 0.5, 8.5, -7.5, 0.5, 49.5, -7.5, 0.5, 10.75, -8.5, 0.5, 10.5, -49.5, 0.5, 49.5, -6.25, 0.5, 10.25, -3.5, 0.5, 10.5, -2.5, 0.5, 10.75, -2.5, 0.5, 49.5, -1.25, 0.5, 10.25, 1.5, 0.5, 10.5, 2.5, 0.5, 10.75, 2.5, 0.5, 49.5, 3.75, 0.5, 10.25, 6.5, 0.5, 10.5, 7.5, 0.5, 10.75, 7.5, 0.5, 49.5, 8.75, 0.5, 10.25, 49.5, 0.5, 49.5)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 3), PackedInt32Array(3, 0, 4), PackedInt32Array(0, 5, 4), PackedInt32Array(9, 8, 6), PackedInt32Array(6, 8, 7), PackedInt32Array(6, 1, 9), PackedInt32Array(9, 1, 10), PackedInt32Array(10, 1, 2), PackedInt32Array(10, 2, 11), PackedInt32Array(15, 14, 12), PackedInt32Array(12, 14, 13), PackedInt32Array(12, 10, 15), PackedInt32Array(15, 10, 16), PackedInt32Array(16, 10, 11), PackedInt32Array(16, 11, 17), PackedInt32Array(21, 20, 18), PackedInt32Array(18, 20, 19), PackedInt32Array(18, 16, 21), PackedInt32Array(21, 16, 22), PackedInt32Array(22, 16, 17), PackedInt32Array(22, 17, 23), PackedInt32Array(22, 23, 24), PackedInt32Array(24, 23, 26), PackedInt32Array(24, 26, 25), PackedInt32Array(25, 27, 24), PackedInt32Array(27, 25, 28), PackedInt32Array(28, 25, 29), PackedInt32Array(7, 8, 30), PackedInt32Array(30, 8, 31), PackedInt32Array(13, 14, 32), PackedInt32Array(32, 14, 33), PackedInt32Array(19, 20, 34), PackedInt32Array(34, 20, 35), PackedInt32Array(4, 5, 36), PackedInt32Array(36, 5, 37), PackedInt32Array(39, 38, 40), PackedInt32Array(40, 38, 41), PackedInt32Array(40, 41, 36), PackedInt32Array(36, 37, 40), PackedInt32Array(43, 42, 31), PackedInt32Array(31, 42, 30), PackedInt32Array(43, 44, 42), PackedInt32Array(42, 44, 39), PackedInt32Array(39, 44, 45), PackedInt32Array(39, 45, 38), PackedInt32Array(47, 46, 33), PackedInt32Array(33, 46, 32), PackedInt32Array(47, 48, 46), PackedInt32Array(46, 48, 44), PackedInt32Array(44, 48, 49), PackedInt32Array(44, 49, 45), PackedInt32Array(51, 50, 35), PackedInt32Array(35, 50, 34), PackedInt32Array(51, 52, 50), PackedInt32Array(50, 52, 48), PackedInt32Array(48, 52, 53), PackedInt32Array(48, 53, 49), PackedInt32Array(52, 54, 53), PackedInt32Array(53, 54, 55), PackedInt32Array(55, 54, 29), PackedInt32Array(54, 28, 29)]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_0xm2m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_texture = ExtResource("3_85g3d")
uv1_scale = Vector3(0.5, 0.5, 0.5)
uv1_triplanar = true
uv1_world_triplanar = true
uv2_world_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_1bvp3"]
lightmap_size_hint = Vector2i(502, 502)
size = Vector2(100, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_h2yge"]
size = Vector3(1, 3, 20)

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ya4ey"]
size = Vector3(1, 2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lquwl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tipki"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_tipki"]
material = SubResource("StandardMaterial3D_tipki")

[sub_resource type="SphereShape3D" id="SphereShape3D_85g3d"]
radius = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_choun"]
size = Vector3(9, 3.5, 17.5)

[node name="Main" type="Node3D"]

[node name="StateChartDebugger" parent="." instance=ExtResource("1_85g3d")]
offset_left = 1733.0
offset_top = 17.0
initial_node_to_watch = NodePath("../Enemy/EnemyStates")

[node name="Character" parent="." instance=ExtResource("1_o6xl0")]
transform = Transform3D(1, 0, -1.0658141e-14, 0, 1, 0, 1.0658141e-14, 0, 1, 0, 0, 0)
script = ExtResource("2_tipki")
acceleration = 15.0
mouse_sensitivity = 0.3
default_reticle = null
controls = {
&"BACKWARD": "backward",
&"CROUCH": "crouch",
&"FORWARD": "forward",
&"JUMP": "ui_accept",
&"LEFT": "left",
&"PAUSE": "ui_cancel",
&"RIGHT": "right",
&"SPRINT": "sprint"
}
dynamic_fov = false
jump_animation = false

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="World" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_choun")
script = ExtResource("4_eb6dy")

[node name="Ground" type="StaticBody3D" parent="World"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ground"]
visible = false
shape = SubResource("WorldBoundaryShape3D_0xm2m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Ground"]
material_override = SubResource("StandardMaterial3D_h2yge")
mesh = SubResource("PlaneMesh_1bvp3")

[node name="Wall" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_h2yge")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Wall"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("BoxMesh_1bvp3")

[node name="Wall2" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 2.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_h2yge")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Wall2"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("BoxMesh_1bvp3")

[node name="Wall3" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_h2yge")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Wall3"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("BoxMesh_1bvp3")

[node name="Wall4" type="StaticBody3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 2.5, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Wall4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_h2yge")

[node name="MeshInstance3D" type="MeshInstance3D" parent="World/Wall4"]
transform = Transform3D(1, 0, 0, 0, 3, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("BoxMesh_1bvp3")

[node name="GridMap" type="GridMap" parent="World"]

[node name="Enemy" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -25.5)
sync_to_physics = false
script = ExtResource("4_tipki")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_ya4ey")

[node name="Body" type="MeshInstance3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_lquwl")

[node name="Nose" type="MeshInstance3D" parent="Enemy"]
transform = Transform3D(0.2, 0, 0, 0, -8.742278e-09, -0.2, 0, 0.2, -8.742278e-09, 0, 1.5, -0.5)
mesh = SubResource("CylinderMesh_tipki")
skeleton = NodePath("../Body")

[node name="EnemyStates" type="Node" parent="Enemy"]
script = ExtResource("4_choun")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Root" type="Node" parent="Enemy/EnemyStates"]
script = ExtResource("5_ya4ey")
initial_state = NodePath("Wandering")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Following" type="Node" parent="Enemy/EnemyStates/Root"]
script = ExtResource("6_eb6dy")

[node name="PlayerDisappeared" type="Node" parent="Enemy/EnemyStates/Root/Following"]
script = ExtResource("7_trceg")
to = NodePath("../../Wandering")
event = &"player_disappeared"
delay_in_seconds = "0.0"

[node name="Wandering" type="Node" parent="Enemy/EnemyStates/Root"]
script = ExtResource("5_ya4ey")
initial_state = NodePath("FollowingPath")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="FreeWandering" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("6_eb6dy")

[node name="FollowingPath" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("6_eb6dy")

[node name="Standing" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("6_eb6dy")

[node name="PlayerDetected" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("7_trceg")
to = NodePath("../../Following")
event = &"player_detected"
delay_in_seconds = "0.0"

[node name="StartStanding" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("7_trceg")
to = NodePath("../Standing")
event = &"start_standing"
delay_in_seconds = "0.0"

[node name="Roam" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("7_trceg")
to = NodePath("../FreeWandering")
event = &"roam"
delay_in_seconds = "0.0"

[node name="FollowPath" type="Node" parent="Enemy/EnemyStates/Root/Wandering"]
script = ExtResource("7_trceg")
to = NodePath("../FollowingPath")
event = &"follow_path"
delay_in_seconds = "0.0"

[node name="DetectionRegion" type="Area3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy/DetectionRegion"]
shape = SubResource("SphereShape3D_85g3d")

[node name="VisionRegion" type="Area3D" parent="Enemy"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy/VisionRegion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -9.5)
shape = SubResource("BoxShape3D_choun")

[node name="EnemyVision" type="RayCast3D" parent="Enemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -14.5)
top_level = true
target_position = Vector3(0, -5, 0)
script = ExtResource("10_choun")

[node name="Navigator" type="NavigationAgent3D" parent="Enemy"]
path_height_offset = 0.5
debug_enabled = true

[node name="WanderCooldown" type="Timer" parent="Enemy"]
wait_time = 4.0
one_shot = true

[connection signal="state_processing" from="Enemy/EnemyStates/Root/Following" to="Enemy" method="_on_following_state_processing"]
[connection signal="state_entered" from="Enemy/EnemyStates/Root/Wandering/FreeWandering" to="Enemy" method="_on_free_wandering_state_entered"]
[connection signal="state_physics_processing" from="Enemy/EnemyStates/Root/Wandering/FreeWandering" to="Enemy" method="_on_free_wandering_state_physics_processing"]
[connection signal="state_entered" from="Enemy/EnemyStates/Root/Wandering/FollowingPath" to="Enemy" method="_on_following_path_state_entered"]
[connection signal="state_physics_processing" from="Enemy/EnemyStates/Root/Wandering/FollowingPath" to="Enemy" method="_on_following_path_state_physics_processing"]
[connection signal="state_entered" from="Enemy/EnemyStates/Root/Wandering/Standing" to="Enemy" method="_on_standing_state_entered"]
[connection signal="state_physics_processing" from="Enemy/EnemyStates/Root/Wandering/Standing" to="Enemy" method="_on_standing_state_physics_processing"]
[connection signal="area_entered" from="Enemy/DetectionRegion" to="Enemy" method="_on_detection_region_area_entered"]
[connection signal="area_exited" from="Enemy/DetectionRegion" to="Enemy" method="_on_detection_region_area_exited"]
